fixed recommend product image stretch issue on home page

--- a/src/Web/Gbmono.Web/content/css/index.css
+++ b/src/Web/Gbmono.Web/content/css/index.css
@@ -110,7 +110,6 @@
 
 #indexView .recommend-list img {
     display: block;
-    width: 100%;
     max-width: 208px;
     height: auto;
     margin: 0 auto;
